
# Note: This crate must be built using do.sh

[package]
name = "solchess"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.9", default-features = false, optional = true }
legal_chess = "0.3.1"

[lib]
name = "solchess"
crate-type = ["cdylib", "lib"]
